src/assets/App.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap');

body {
  margin: 0;
  font-family: 'Roboto', 'Segoe UI', sans-serif,
    sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  /* background-image: url('./img/backdrop.jpg');
  background-size: cover;
  background-attachment: fixed; */
  background: #f0f0f0;
}
/* .backdrop-overlay {
  height: 100%;
  background: rgba(255, 255, 255, 0.9);
  box-shadow: inset 0 0 100em white;
  min-height: 100vh;
} */

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

a {
  color: #6f48b6;
}

a:hover {
  color: #552a9e;
  text-decoration: underline;
}

p {
  word-spacing: 0.03rem;
}

.ml-100 {
  margin-left: 5em;
}

.accent-background {
  background: #673ab7;
  color: #fff;
}
.text-sm {
  font-size: 0.9rem;
  line-height: 1.35rem;
}

.text-m {
  font-size: 1.1rem;
}

.text-muted {
  color:#8a9196 !important;
}

.close {
  font-size: 2rem;
}

.btn-outline-light {
  color: #4e3b6f;
  border:2px solid #c4b1e0;
  margin-bottom: 4px;
  font-weight: bold;
}

.btn-outline-light i {
  font-weight: 400;
}

.btn-outline-light:hover {
  background: #673ab7;
  color: #f4f4f4;
}

.btn-accent {
  background:#673ab7;
  color:#ffffff;
  border-radius:0px;
  border:0px;
  margin-right: 8px;
  margin-bottom: 8px;
}

.decimal-list {
  list-style-type: decimal;
  margin:0;
  padding:0;
}

.display-art {
  box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 6px 0px;
  max-height:50vh;
  object-fit: cover;
  object-position:top;
}

.btn-accent:hover {
  background:#5c34a4;
  color:#ffffff;
}

.hover-underline:hover {
  text-decoration: underline;
}

.m-b-15 {
  margin-bottom: 1.5rem;
}

.m-t-15 {
  margin-top: 1.5rem;
}


.navbar {
  position:absolute;
  right:0;
  top:0rem;
  padding-right: 0;
}

.nav-item {
  font-size:1.05rem;
  margin:0 0.25rem;
}

.nav-link {
  color:rgba(255,255,255,.7) !important;
}

.nav-link:hover {
  background:rgba(0,0,0,.4) !important;
  border-radius: 2px;
}

.header {
  position: relative;
  padding:4rem 0 1rem 0;
}

.header-background {
  background-image: url('./img/servers.png');
  background-position: center;
  background-size: contain;
  background-color: #3b1f6a;
  color:rgba(255, 255, 255, 0.8);
}

.img-profile {
    border: 0.5rem rgba(0, 0, 0, 0.2) solid;
    border-radius: 50%;
    box-shadow: 0 2px 6px 0 hsla(0, 0%, 0%, 0.2);
}

.hello {
  color: rgba(255, 255, 255, 0.7);
  font-size: 1.5rem;
  margin-top: 1rem;
}

.name-author {
  color: #fff;
  font-family: 'Poppins';
  font-weight: 500;
}

.statement {
  font-size: 3.5rem;
  line-height: 4rem;
}

.title {
  font-size: 1.5rem;
  font-weight: 500;
  margin-top:1rem;
}

.quick-about {
  font-size: 1.1rem;
  margin-top: 0.5rem;
  color: rgba(255,255,255,0.95);
}

.heading {
  color: #212121;
  font-size: 1.5rem;
  font-family: 'Poppins';
}

.b-accent-border {
  border-bottom: 0.1rem #673ab7 solid;
  padding-bottom: 0.1rem;
}

.b {
  font-weight: bold;
}

/* .m-card {
  padding: 0.8rem 1rem;
  box-shadow: 0 2px 6px 0 hsla(0, 0%, 0%, 0.2);
  border-radius: 6px;
  background: #fff;
  margin-bottom: 1rem;
} */

.m-card {
  border-radius: 4px;
  background: #fff;
  margin-bottom: 1rem;
}

.m-card-body {
  padding: 0.8rem 1rem;
}

.m-card-title {
  font-size: 1.1rem;
  line-height: 1.4rem;
  font-weight: bold;
  font-family: 'Poppins';
  color: #343434;
  padding-bottom: 0.2rem;
}

.m-card-title a {
  color:#343434;
}

.m-card-title a:hover {
  color:#212121;
}

.m-card-title a i {
  font-size:0.7rem;
  color:#879096;
  vertical-align: middle;
}

.m-card-subtitle {
  font-size: 0.9rem;
  line-height: 1.3rem;
  font-weight: 500;
}

.m-card-subtitle a {
  color:#62686c;
}

.m-card-subtitle a i {
  font-size:0.7rem;
  color:#879096;
  vertical-align: middle;
}

.m-card-description {
  color:#555555;
  line-height: 1.4rem;
}

.card-img-top {
  max-height: 175px;
  object-fit: cover;
  object-position: top;
}

.contact-links a {
  font-size: 0.9rem;
  padding: 0.8rem;
  margin: 0.1rem;
}

.contact-links a:hover {
  background: rgb(255, 255, 255,0.2);
}

.cl-git,
.cl-git:hover {
  color: #fefefe;
}

.cl-linkedin,
.cl-linkedin:hover {
  color: #00a6ff;
}

.cl-twitter,
.cl-twitter:hover {
  color: #0084b4;
}

.cl-email,
.cl-email:hover {
  color: #fe4c38;
}

.cl-medium,
.cl-medium:hover {
  color: #ffffff;
}

.workfinishdate {
  position: absolute;
  left: 1em;
  color: #673ab7;
  padding-top: 1.075em;
  font-size: 0.85rem;
  font-weight: 500;
}

.work-card {
  position: relative;
}

.work-card:before {
  content: '';
  border-left: .1rem solid #673ab7;
  position: absolute;
  height: 95%;
  top: 2.1em;
  left: -1em;
}

.workfinishdate:before {
  position: absolute;
  content: '';
  background: #673ab7;
  border-radius: 10em;
  width: 1em;
  height: 1em;
  left: 4.375em;
  top: 1.25em;
}

/* Animations */

.fade-in-0 {
  opacity: 1;
  animation-name: fadeInOpacity;
  animation-iteration-count: 1;
  animation-timing-function: ease-in;
  animation-duration: 10s;
}

.fade-in-1 {
  opacity: 1;
  animation-name: fadeInOpacity;
  animation-iteration-count: 1;
  animation-timing-function: ease-in;
  animation-duration: 0.5s;
}

.fade-in-2 {
  opacity: 1;
  animation-name: fadeInOpacity;
  animation-iteration-count: 1;
  animation-timing-function: ease-in;
  animation-duration: 1s;
}
.fade-in-3 {
  opacity: 1;
  animation-name: fadeInOpacity;
  animation-iteration-count: 1;
  animation-timing-function: ease-in;
  animation-duration: 1.25s;
}
.fade-in-4 {
  opacity: 1;
  animation-name: fadeInOpacity;
  animation-iteration-count: 1;
  animation-timing-function: ease-in;
  animation-duration: 1.5s;
}
@keyframes fadeInOpacity {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}
@keyframes slideUp {
  0% {
    bottom: 0;
  }
  100% {
    bottom: 2rem;
  }
}

/* col-lg */
@media only screen and (max-width: 1200px) {
  .statement {
    font-size: 3rem;
  }

  .title {
    font-size: 1.5rem;
    margin-top: 0;
  }

  .quick-about {
    font-size: 1.15rem;
  }

  .hello {
    line-height: 1.5rem;
    font-weight: 500;
  }
}

/* col-md */
@media only screen and (max-width: 992px) {
  .statement {
    font-size: 2.5rem;
  }

  .title {
    font-size: 1.3rem;
  }

  .quick-about {
    font-size: 1rem;
  }
}

@media only screen and (max-width: 768px) {
  /* mobile display */
  
  .nav-item {
    font-size: 0.95rem;
  }

  .heading {
    font-size:1.3rem;
  }

  body {
    font-size: 14px;
  }

  .m-card-title {
    font-size: 1.05rem;
  }

  .statement {
    font-size: 1.7rem;
    line-height:2rem;
    margin-bottom: 0.5rem;
    line-height: 2.5rem;
  }

  .title {
    font-size: 1.1rem;
  }

  .quick-about {
    font-size: 1rem;
  }

  .img-profile {
    display:none;
  }

  .hello {
    margin-top: 0;
    font-size:1.1rem;
    font-weight: 400;
  }
  
  .work-card:before {
    top: 2.4em;
  }

  .workfinishdate:before {
    left: 3.75em;
  }
}

